...
        .overlay {
            if movies.isEmpty {
                VStack {
                    Spacer()
                    HStack {
                        Image(systemName: "magnifyingglass")
                        Text("Sorry, no movies found")
                    }
                    Spacer()
                }
            }
        }
    }
...
